--- a/app/src/main/res/drawable/ic_undraw_empty.xml
+++ b/app/src/main/res/drawable/ic_undraw_empty.xml
@@ -119,7 +119,7 @@
         android:fillColor="#fff" />
     <path
         android:pathData="M321.365,270.503l99.44,38.382a0.897,0.897 0,0 0,0.457 0.054l64.247,-9.522a0.883,0.883 0,0 0,0.755 -0.752l12.92,-85.067a0.905,0.905 0,0 0,-0.599 -0.982l-0.662,-0.224 -97.758,-32.546a0.678,0.678 0,0 0,-0.137 -0.033,0.887 0.887,0 0,0 -0.23,-0.012l-60.164,5.693 -4.774,0.448a0.903,0.903 0,0 0,-0.795 0.748l-13.259,82.834A0.897,0.897 0,0 0,321.365 270.503Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M339.634,185.495l60.164,-5.693a0.887,0.887 0,0 1,0.23 0.012,0.678 0.678,0 0,1 0.137,0.033l97.758,32.546 -25.787,2.73 -9.65,1.017 -27.46,2.901a1.939,1.939 0,0 1,-0.241 -0.003c-0.049,-0.015 -0.098,-0.029 -0.156,-0.045Z"
         android:fillColor="#2f2e41" />
@@ -170,7 +170,7 @@
         android:fillColor="#9e616a" />
     <path
         android:pathData="M430.713,171.577"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M637.494,157.204c-3.869,-7.7 -5.749,-17.212 -13.997,-19.708 -5.57,-1.686 -28.097,0.84 -33.173,3.686 -8.444,4.733 -0.792,13.602 -5.773,21.902 -5.415,9.023 -20.132,27.13 -25.547,36.152 -3.723,6.203 8.817,24.409 6.804,31.358 -2.013,6.948 -2.11,14.747 1.32,21.117 3.069,5.701 -1.371,10.745 1.715,16.437 3.21,5.92 7.148,28.053 4.161,34.088l-2,6c19.847,1.166 36.535,-22.544 56.258,-25.042 4.899,-0.62 9.986,-1.431 14.023,-4.274 5.946,-4.189 8.297,-11.789 9.766,-18.913A159.326,159.326 0,0 0,637.494 157.204Z"
         android:fillColor="#3f3d56" />
