--- a/app/src/main/res/drawable/ic_undraw_home.xml
+++ b/app/src/main/res/drawable/ic_undraw_home.xml
@@ -32,7 +32,7 @@
         android:fillColor="#e6e6e6" />
     <path
         android:pathData="M230.088,390.996L230.088,350.558a17.622,17.622 0,0 1,8.877 -15.299L463.641,206.846a17.622,17.622 0,0 1,18.22 0.442L682.309,335.138a17.622,17.622 0,0 1,8.146 14.857v41.001a17.622,17.622 0,0 1,-17.622 17.622L247.71,408.617A17.622,17.622 0,0 1,230.088 390.996Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:fillColor="#FF000000"
         android:pathData="M672.833,390.614L247.71,390.614a17.622,17.622 0,0 1,-17.622 -17.622v16a17.622,17.622 0,0 0,17.622 17.622L672.833,406.614a17.622,17.622 0,0 0,17.622 -17.622v-16A17.622,17.622 0,0 1,672.833 390.614Z"
@@ -52,7 +52,7 @@
         android:fillColor="#3f3d56" />
     <path
         android:pathData="M22.028,467.291c0,-45.616 36.979,-153.861 82.595,-153.861s82.595,108.245 82.595,153.861a82.595,82.595 0,1 1,-165.191 0Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M104.623,667.219a1,1 0,0 1,-1 -1L103.623,369.64a1,1 0,0 1,2 0L105.623,666.219A1,1 0,0 1,104.623 667.219Z"
         android:fillColor="#3f3d56" />
