--- a/app/src/main/res/drawable/ic_undraw_id.xml
+++ b/app/src/main/res/drawable/ic_undraw_id.xml
@@ -4,10 +4,10 @@
     android:viewportWidth="704"
     android:viewportHeight="745.19434">
     <path
-        android:fillColor="#ef7c8e"
+        android:fillColor="@color/primaryColor"
         android:pathData="M96.694,583.848l-8.387,-33.073A429.461,429.461 0,0 0,42.742 534.431l-1.058,15.371L37.39,532.868c-19.202,-5.482 -32.265,-7.896 -32.265,-7.896s17.649,67.097 54.661,118.393l43.124,7.572 -33.501,4.832A173.751,173.751 0,0 0,84.395 671.649c53.84,49.97 113.807,72.894 133.938,51.203s-7.195,-79.784 -61.035,-129.754c-16.691,-15.491 -37.658,-27.922 -58.646,-37.705Z" />
     <path
-        android:fillColor="#ef7c8e"
+        android:fillColor="@color/primaryColor"
         android:pathData="M176.443,547.927l9.916,-32.647a429.465,429.465 0,0 0,-30.557 -37.544L146.951,490.347l5.077,-16.715c-13.604,-14.618 -23.539,-23.438 -23.539,-23.438s-19.575,66.561 -14.405,129.604l33.002,28.773L115.909,595.391a173.751,173.751 0,0 0,4.621 21.341c20.26,70.607 59.745,121.228 88.19,113.065s35.081,-72.017 14.821,-142.624c-6.281,-21.889 -17.804,-43.368 -30.714,-62.592Z" />
     <path
         android:fillColor="#3f3d56"
@@ -64,10 +64,10 @@
         android:fillColor="#ffb8b8"
         android:pathData="M456.437,190.199l14.902,34.77 29.803,-23.18s-18.213,-24.836 -18.213,-28.147Z" />
     <path
-        android:fillColor="#ef7c8e"
+        android:fillColor="@color/primaryColor"
         android:pathData="M459.749,210.067l7.064,4.341s22.823,-12.101 28.576,-20.639c0,0 20.655,-6.882 28.934,9.675s-4.967,130.803 -4.967,130.803 8.279,11.59 6.623,16.557S530.945,364.05 530.945,364.05v9.934s-94.377,1.656 -94.377,-6.623L436.568,340.87l-9.934,-3.311s-9.934,21.524 -13.246,19.869 -19.869,-14.902 -19.869,-14.902 26.492,-87.754 41.393,-102.655l18.213,-31.459Z" />
     <path
-        android:fillColor="#ef7c8e"
+        android:fillColor="@color/primaryColor"
         android:pathData="M456.437,211.723s-3.311,-6.623 -8.279,-8.279 -29.803,-36.426 -29.803,-36.426l3.311,-18.213 -33.115,-4.967s1.656,18.213 8.279,29.803 43.049,71.196 43.049,71.196l18.213,-33.115Z" />
     <path
         android:fillColor="#ffb8b8"
@@ -76,7 +76,7 @@
         android:fillColor="#2f2e41"
         android:pathData="M418.405,162.535c26.522,-10.63 52.669,-12.898 78.135,0L496.54,141.109A13.955,13.955 0,0 0,482.584 127.153L429.43,127.153a11.025,11.025 0,0 0,-11.025 11.025Z" />
     <path
-        android:fillColor="#ef7c8e"
+        android:fillColor="@color/primaryColor"
         android:pathData="M502.798,208.412s15.107,-12.796 23.283,1.881 3.209,77.594 1.553,85.873 -13.246,59.606 -13.246,59.606l-39.738,-8.279s-3.311,-23.18 6.623,-21.524Z" />
     <path
         android:fillColor="#2f2e41"
