--- a/app/src/main/res/drawable/ic_undraw_transfer.xml
+++ b/app/src/main/res/drawable/ic_undraw_transfer.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="48dp"
+    android:height="48dp"
     android:viewportWidth="1099"
     android:viewportHeight="797.68036">
     <path
@@ -45,7 +45,7 @@
         android:fillColor="#ffb9b9" />
     <path
         android:pathData="M795.49,481.24l33.71,-6.74s8.43,26.96 35.39,21.91 33.71,-21.91 33.71,-21.91 20.22,8.43 21.91,8.43 23.59,8.43 23.59,13.48 -25.28,55.61 -25.28,55.61l3.37,91.01 -124.71,-3.37 8.43,-89.32Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M776.95,525.06s-10.11,89.32 -3.37,96.06 33.71,25.28 33.71,25.28L807.28,626.18l-13.48,-25.28 13.48,-58.99Z"
         android:fillColor="#ffb9b9" />
@@ -64,10 +64,10 @@
         android:fillAlpha="0.2" />
     <path
         android:pathData="M805.6,484.61l-10.11,-3.37s-37.08,38.76 -25.28,48.87 18.54,13.48 21.91,16.85 20.22,5.06 20.22,5.06Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M928.63,493.04l15.17,3.37s11.8,25.28 15.17,28.65 -5.06,1.69 -10.11,8.43 -10.11,18.54 -20.22,18.54 -23.59,-16.85 -23.59,-16.85Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M798.86,666.63s-64.04,-45.5 -85.95,-11.8 94.38,79.21 111.23,85.95 32.02,13.48 32.02,13.48 15.17,-37.08 15.17,-43.82 -11.8,-6.74 -15.17,-6.74 -18.54,-3.37 -21.91,-8.43S798.86,666.63 798.86,666.63Z"
         android:fillColor="#2f2e41" />
@@ -100,7 +100,7 @@
         android:fillColor="#3f3d56" />
     <path
         android:pathData="M68.47,746.11c0,22.47 -13.36,30.31 -29.83,30.31q-0.57,0 -1.14,-0.01c-0.76,-0.02 -1.52,-0.05 -2.27,-0.1 -14.87,-1.05 -26.42,-9.3 -26.42,-30.2 0,-21.63 27.63,-48.91 29.71,-50.93l0,-0c0.08,-0.08 0.12,-0.12 0.12,-0.12S68.47,723.64 68.47,746.11Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M37.55,772.99 L48.46,757.74 37.53,774.66l-0.03,1.75c-0.76,-0.02 -1.52,-0.05 -2.27,-0.1l1.18,-22.48 -0.01,-0.17 0.02,-0.03 0.11,-2.12L25.56,734.54 36.56,749.91l0.03,0.45 0.89,-16.98 -9.39,-17.53 9.5,14.55 0.93,-35.21 0,-0.12v0.12L38.36,722.94l9.35,-11.01L38.33,725.34l-0.25,15.21 8.73,-14.59 -8.76,16.83 -0.14,8.45 12.67,-20.31 -12.72,23.26Z"
         android:fillColor="#3f3d56" />
@@ -124,7 +124,7 @@
         android:fillColor="#9f616a" />
     <path
         android:pathData="M191.92,197.02s-10.61,1.18 -12.96,4.71 -18.86,14.14 -31.82,11.78 -21.21,-5.89 -23.57,-4.71 -7.07,25.93 -7.07,25.93l12.96,37.71 -2.36,103.7 -3.54,28.28s-7.07,-9.43 21.21,-3.54 64.82,-4.71 76.6,-5.89 31.82,-4.71 33,-11.78 -3.54,-33 -3.54,-33l-18.86,-78.96 -11.78,-42.42Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M180.77,191.7s9.97,-5.29 13.5,-0.57 48.32,11.78 48.32,15.32 9.43,98.99 7.07,107.24 4.71,17.68 4.71,17.68l8.25,35.35s22.39,67.17 12.96,69.53 -17.68,0 -21.21,0 -2.36,-44.78 -11.78,-56.57 -22.39,-41.25 -24.75,-47.14 -31.82,-87.21 -30.64,-96.63S180.77,191.7 180.77,191.7Z"
         android:fillColor="#d0cde1" />
@@ -150,7 +150,7 @@
         android:fillColor="#2f2e41" />
     <path
         android:pathData="M223.78,255.97a6.43,7 67.56,1 0,12.94 -5.34a6.43,7 67.56,1 0,-12.94 5.34z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M209.59,300.72s-84.85,70.71 -98.99,48.32 15.32,-41.25 15.32,-41.25 25.93,1.18 55.39,-17.68l29.46,-12.96s26.9,-38.4 36.06,-23.78S231.19,293.45 209.59,300.72Z"
         android:fillColor="#9f616a" />
