--- a/app/src/main/res/drawable/ic_undraw_business.xml
+++ b/app/src/main/res/drawable/ic_undraw_business.xml
@@ -59,7 +59,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M302.832,549.684m-8.245,0a8.245,8.245 0,1 1,16.491 0a8.245,8.245 0,1 1,-16.491 0"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M362.799,399.767h256.357v215.13h-256.357z"
         android:fillColor="#3f3d56" />
@@ -68,7 +68,7 @@
         android:fillColor="#3f3d56" />
     <path
         android:pathData="M371.794,488.967h8.995v55.469h-8.995z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M371.794,497.213h8.995v6.746h-8.995z"
         android:fillColor="#f2f2f2" />
@@ -77,7 +77,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M385.286,488.967h21.738v55.469h-21.738z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M385.286,497.213h21.738v6.746h-21.738z"
         android:fillColor="#f2f2f2" />
@@ -86,7 +86,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M412.271,488.967h8.995v55.469h-8.995z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M412.271,497.213h8.995v6.746h-8.995z"
         android:fillColor="#f2f2f2" />
@@ -95,7 +95,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M425.764,488.967h8.995v55.469h-8.995z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M425.764,497.213h8.995v6.746h-8.995z"
         android:fillColor="#f2f2f2" />
@@ -104,7 +104,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M435.01,492.336l8.417,-3.173l19.565,51.904l-8.417,3.173z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M437.918,500.052l8.417,-3.173l2.38,6.313l-8.417,3.173z"
         android:fillColor="#f2f2f2" />
@@ -113,7 +113,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M589.173,488.967h21.738v55.469h-21.738z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M589.173,497.213h21.738v6.746h-21.738z"
         android:fillColor="#f2f2f2" />
@@ -122,7 +122,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M574.931,488.967h8.995v55.469h-8.995z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M574.931,497.213h8.995v6.746h-8.995z"
         android:fillColor="#f2f2f2" />
@@ -131,7 +131,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M561.438,488.967h8.995v55.469h-8.995z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M561.438,497.213h8.995v6.746h-8.995z"
         android:fillColor="#f2f2f2" />
@@ -140,7 +140,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M533.205,541.068l19.565,-51.904l8.417,3.173l-19.565,51.904z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M547.482,503.192l2.38,-6.313l8.417,3.173l-2.38,6.313z"
         android:fillColor="#f2f2f2" />
@@ -152,7 +152,7 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M474.487,488.967h47.224v55.469h-47.224z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M486.105,500.961h23.987v10.494h-23.987z"
         android:fillColor="#f2f2f2" />
@@ -164,10 +164,10 @@
         android:fillColor="#f2f2f2" />
     <path
         android:pathData="M679.295,219.117l-523.958,0l9.317,-19.489l509.132,0l5.509,19.489z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M692.008,264.092l-558.177,0l9.317,-19.489l543.351,0l5.509,19.489z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M746.877,151.411s-7.526,19.353 -5.954,38.501a20.293,20.293 0,0 0,3.355 9.587h0L652.073,243.273s-41.662,4.313 -31.264,22.509 48.088,-9.098 48.088,-9.098 98.775,-14.296 106.573,-28.593 12.997,-74.081 12.997,-74.081Z"
         android:fillColor="#a0616a" />
@@ -176,7 +176,7 @@
         android:fillColor="#d0cde1" />
     <path
         android:pathData="M100,386.376m-100,0a100,100 0,1 1,200 0a100,100 0,1 1,-200 0"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:fillColor="#FF000000"
         android:pathData="M100,386.376m-86,0a86,86 0,1 1,172 0a86,86 0,1 1,-172 0"
