--- a/app/src/main/res/drawable/ic_undraw_development.xml
+++ b/app/src/main/res/drawable/ic_undraw_development.xml
@@ -53,7 +53,7 @@
         android:fillColor="#3f3d56" />
     <path
         android:pathData="M364.301,141.701c-2.776,2.892 -5.435,5.901 -7.939,9.026 -5.513,6.638 -10.948,13.335 -16.402,20.013 -3.397,4.154 -6.794,8.308 -10.152,12.462a24.789,24.789 0,0 1,-3.028 -2.29A27.161,27.161 0,0 1,361.486 139.139,25.035 25.035,0 0,1 364.301,141.701Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M465.194,138.547v4.03l-1.8,-0.66 -25.33,-9.26c-8.25,-3.01 -16.48,-6.45 -25,-8.62a39.402,39.402 0,0 0,-22.64 0.29,51.95 51.95,0 0,0 -17.64,10.95c-2.25,2.08 -4.43,4.21 -6.54,6.42 -0.69,0.73 -1.38,1.46 -2.06,2.19 -2.04,2.22 -4.01,4.49 -5.88,6.84 -5.51,6.64 -10.95,13.34 -16.4,20.01 -3.4,4.16 -6.8,8.31 -10.16,12.46q-16.83,20.595 -33.46,41.27a19.537,19.537 0,0 1,-4.43 -0.56q16.965,-21.075 34.09,-42.04 0.39,-0.48 0.78,-0.96c1.34,-1.67 2.71,-3.35 4.07,-5.02q8.535,-10.455 17.08,-20.89c4.14,-5.06 8.25,-10.14 12.71,-14.94 0.27,-0.31 0.55,-0.61 0.84,-0.92 0.43,-0.46 0.86,-0.91 1.3,-1.38 9.69,-10.01 21.78,-18.86 36.26,-19.1 8.52,-0.13 16.75,2.57 24.67,5.42 8.53,3.09 17.03,6.23 25.55,9.35Z"
         android:fillColor="#3f3d56" />
@@ -80,7 +80,7 @@
         android:fillColor="#ffb6b6" />
     <path
         android:pathData="M237.522,406.834l0,0a13.373,13.373 0,0 0,-18.045 9.162l-7.415,29.943 1.395,52.384s38.702,7.426 45.199,2.653 5.887,-8.327 6.497,-4.774 3.399,5.045 3.437,3.631 0.354,-1.172 1.973,-1.598 8.765,-3.06 8.765,-3.06l0.32,-14.935s-11.814,-4.479 -14.68,-3.142 0.61,3.554 -2.866,1.336 -3.856,-9.216 -4.45,-2.909 -2.334,7.482 -4.94,4.677 -14.681,-1.013 -14.681,-1.013l7.683,-58.23A13.373,13.373 0,0 0,237.522 406.834Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M498.157,562.178l0.407,-11.03l-42.352,-6.819l-0.6,16.279l42.545,1.57z"
         android:fillColor="#ffb6b6" />
@@ -101,7 +101,7 @@
         android:fillColor="#2f2e41" />
     <path
         android:pathData="M244.973,400.104l-24.304,-11.39 -7.276,12.661s-19.542,27.887 -19.825,48.005 3.185,26.101 3.185,26.101 -8.426,6.299 -4.213,10.15 13.54,5.512 6.376,7.181 -5.348,18.569 2.652,21.569 50.964,2.974 50.964,2.974a7.651,7.651 0,0 1,1.89 -7.534c3.331,-3.339 6.331,-0.943 3.331,-6.141s-8,-2.198 -4,-9.198 3.999,-9.092 3.999,-9.092 8.154,-15.519 -4.128,-32.355c-0.749,-1.026 -0.119,-1.066 -0.119,-1.066l-9.918,-33.236Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M205.806,352.211c0.206,5.134 -3.03,12.407 -4.623,16.793 -1.703,4.689 5.679,10.913 10.405,12.276a6.989,6.989 0,0 1,2.289 -4.197,11.967 11.967,0 0,0 -0.087,4.708l39.948,9.094c7.187,-8.322 14.413,-20.287 12.837,-34.717a14.04,14.04 0,0 0,-6.761 -14l-20.195,-11.931c-8.59,-1.956 -19.408,-3.136 -25.613,2.179A24.575,24.575 0,0 0,205.806 352.211Z"
         android:fillColor="#2f2e41" />
@@ -122,13 +122,13 @@
         android:fillColor="#ccc" />
     <path
         android:pathData="M342.893,383.04l-5.782,17.613l-2.237,70.354l9,8l-0.981,-95.967z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M298.18,490.357a7.744,7.744 0,0 0,-10.203 3.547,7.431 7.431,0 0,0 -0.44,1.147l-26.969,1.612 -3.997,13.972 36.706,-6.202a7.723,7.723 0,0 0,8.487 -4.106,7.391 7.391,0 0,0 -3.401,-9.883Q298.272,490.399 298.18,490.357Z"
         android:fillColor="#ffb6b6" />
     <path
         android:pathData="M238.651,421.437l0,0a13.373,13.373 0,0 0,-18.045 9.162l-7.415,29.943 1.395,52.384s38.702,7.426 45.199,2.653 5.887,-8.327 6.497,-4.774 3.399,5.045 3.437,3.631 0.354,-1.172 1.973,-1.598 8.765,-3.06 8.765,-3.06l0.32,-14.935s-11.814,-4.479 -14.68,-3.142 0.61,3.554 -2.866,1.336 -3.856,-9.216 -4.45,-2.909 -2.334,7.482 -4.94,4.677 -14.681,-1.013 -14.681,-1.013l7.683,-58.23A13.373,13.373 0,0 0,238.651 421.437Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M0,595.139a1.186,1.186 0,0 0,1.19 1.19h715.29a1.19,1.19 0,0 0,0 -2.38L1.19,593.949A1.187,1.187 0,0 0,0 595.139Z"
         android:fillColor="#ccc" />
