--- a/app/src/main/res/drawable/ic_undraw_mr.xml
+++ b/app/src/main/res/drawable/ic_undraw_mr.xml
@@ -29,7 +29,7 @@
         android:fillColor="#e6e8ec" />
     <path
         android:pathData="M532.46,42.751v504.09a22.58,22.58 0,0 1,-7.96 17.23,22.642 22.642,0 0,1 -14.69,5.41L305.16,569.48a22.587,22.587 0,0 1,-10.46 -2.55,21.155 21.155,0 0,1 -2.2,-1.3 22.668,22.668 0,0 1,-9.99 -18.79v-504.09a22.649,22.649 0,0 1,22.65 -22.65h30.63v3.93a18.65,18.65 0,0 0,18.65 18.65L458.52,42.68a18.65,18.65 0,0 0,18.65 -18.65v-3.93h32.64A22.643,22.643 0,0 1,532.46 42.751Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M532.46,474.681v72.16a22.58,22.58 0,0 1,-7.96 17.23,22.642 22.642,0 0,1 -14.69,5.41L305.16,569.481a22.587,22.587 0,0 1,-10.46 -2.55,21.155 21.155,0 0,1 -2.2,-1.3 22.668,22.668 0,0 1,-9.99 -18.79v-72.13a186.971,186.971 0,0 1,249.95 -0.03Z"
         android:strokeAlpha="0.3"
@@ -118,7 +118,7 @@
         android:fillColor="#3f3d56" />
     <path
         android:pathData="M50.177,539.433c22.438,13.5 31.08,40.314 31.08,40.314s-27.738,4.927 -50.177,-8.573S0,530.861 0,530.861 27.738,525.934 50.177,539.433Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M282.51,197.351s68.99,-36 116.99,0 132.96,3.402 132.96,3.402"
         android:strokeAlpha="0.3"
