--- a/app/src/main/res/drawable/ic_undraw_name.xml
+++ b/app/src/main/res/drawable/ic_undraw_name.xml
@@ -8,16 +8,16 @@
         android:fillColor="#2f2e41" />
     <path
         android:pathData="M518.96,84.066l3.35,0.94l10.31,2.89l1.08,-3.86l-3.86,-1.08l3.39,-12.09l8.15,-7.08l2.17,23.02l-6,-1.69l-1.08,3.86l15.4,4.32l1.08,-3.86l-3.27,-0.91l-3.14,-29.22l16,-13.91l4.49,1.26l1.08,-3.86l-15.41,-4.32l-1.08,3.86l5.08,1.42l-20.35,15.99l5.64,-20.11l3.86,1.08l1.08,-3.86l-15.41,-4.32l-1.08,3.86l5.78,1.62l-12.15,43.32l-5.78,-1.62l-0.15,0.52l-0.62,2.24l1.44,1.59z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M543.75,120.566A116.744,116.744 0,0 0,532.5 126.176c-0.67,0.38 -1.34,0.77 -2,1.16L530.5,114.966a46.801,46.801 0,0 0,-1.87 -13.15c0.58,-0.36 1.17,-0.75 1.75,-1.14 0.53,-0.35 1.07,-0.71 1.6,-1.07A134.736,134.736 0,0 0,543.75 120.566Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M727.027,611.842l-4.485,-1.258l-1.08,3.851l15.406,4.32l1.08,-3.851l-5.074,-1.423l20.344,-15.996l-5.642,20.119l-3.851,-1.08l-1.08,3.851l15.406,4.32l1.08,-3.851l-5.778,-1.62l12.15,-43.329l5.778,1.62l1.08,-3.851l-15.406,-4.32l-1.08,3.851l3.851,1.08l-3.391,12.094l-8.146,7.08l-2.165,-23.016l5.999,1.682l1.08,-3.851l-15.405,-4.32l-1.08,3.851l3.273,0.918l3.142,29.217l-16.006,13.912z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M745.815,536.67A110.091,110.091 0,0 0,766.275 525.172a169.049,169.049 0,0 0,11.779 20.959A125.777,125.777 0,0 0,757.594 557.629,135.224 135.224,0 0,0 745.815,536.67Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M610.897,328.462s-5.059,32.854 -6.561,34.51 10.5,40.333 10.5,40.333l38.489,-22.442s7.489,-41.52 9.954,-42.906S610.897,328.462 610.897,328.462Z"
         android:fillColor="#ffb8b8" />
@@ -46,7 +46,7 @@
         android:fillColor="#ffb8b8" />
     <path
         android:pathData="M648.165,384.489l-23.115,0.909l-4.814,-1.35l-19.273,-12.795l-6.383,19.102l24.306,-1.493l4.814,1.35l19.986,13.913l4.479,-19.636z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M586.05,528.176l-3.55,7.56l-51,-14l-1,-2.91l0,-16.03l2,0.78l2.06,0.81l51.49,23.79z"
         android:fillColor="#2f2e41" />
@@ -61,22 +61,22 @@
         android:fillColor="#2f2e41" />
     <path
         android:pathData="M605.221,294.293l0.297,-1.295c2.89,-12.58 -19.338,-35.975 -19.563,-36.21l-0.395,-0.412 0.154,-0.55c0.44,-1.568 2.204,-2.961 17.659,0.389 6.018,1.305 12.019,2.895 14.531,3.576 -0.281,-7.183 -9.185,-16.7 -9.28,-16.8l-1.12,-1.187 1.566,-0.459c10.265,-3.009 22.28,6.971 26.12,10.505l6.419,-22.89 12.701,18.76c7.797,-11.673 19.076,-11.2 19.569,-11.172l1.583,0.086L674.703,238.026c-5.343,9.775 -6.306,16.196 -6.361,19.362 14.216,-16.889 27.027,-15.418 27.584,-15.344l1.941,0.256 -1.346,1.422c-18.611,19.665 -20.802,45.606 -20.822,45.866l-0.067,0.874ZM588.17,256.227c3.93,4.259 20.924,23.481 19.516,35.928l66.11,-3.596c0.545,-4.628 3.898,-26.648 19.705,-44.5 -4.308,0.385 -14.47,2.84 -25.175,16.521l-1.227,1.568 -0.525,-1.92c-0.083,-0.303 -1.872,-7.336 5.553,-21.623 -3.404,0.322 -11.329,2.104 -16.929,11.454l-0.806,1.346 -12.02,-17.753 -6.169,22L634.992,254.426c-0.135,-0.137 -13.031,-13.049 -23.754,-11.509 2.753,3.205 9.338,11.646 8.617,18.282l-0.127,1.174 -1.137,-0.319C605.963,258.513 591.539,255.491 588.17,256.227Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M700.908,236.775a3.587,3.587 0,1 1,4.422 -2.485A3.591,3.591 0,0 1,700.908 236.775ZM702.305,231.794a1.587,1.587 0,1 0,1.1 1.956A1.589,1.589 0,0 0,702.305 231.794Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M676,229.791a3.587,3.587 0,1 1,4.422 -2.485A3.591,3.591 0,0 1,676 229.791ZM677.397,224.809a1.587,1.587 0,1 0,1.1 1.956A1.589,1.589 0,0 0,677.397 224.809Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M638.136,225.89a3.587,3.587 0,1 1,4.422 -2.485A3.591,3.591 0,0 1,638.136 225.89ZM639.533,220.909a1.587,1.587 0,1 0,1.1 1.956A1.589,1.589 0,0 0,639.533 220.909Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M577.689,254.615a3.587,3.587 0,1 1,4.422 -2.485A3.591,3.591 0,0 1,577.689 254.615ZM579.086,249.633a1.587,1.587 0,1 0,1.1 1.956A1.589,1.589 0,0 0,579.086 249.633Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M601.063,238.331a3.587,3.587 0,1 1,4.422 -2.485A3.591,3.591 0,0 1,601.063 238.331ZM602.46,233.35a1.587,1.587 0,1 0,1.1 1.956A1.589,1.589 0,0 0,602.46 233.35Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M720.272,575.155l-0.962,-0.27l-188.501,-52.858l0.539,-1.926l187.539,52.589l118.531,-422.696l-264.306,-74.114l-40.313,143.765l-1.926,-0.54l40.855,-145.691l0.961,0.27l267.194,74.925l-0.27,0.962l-119.341,425.584z"
         android:fillColor="#2f2e41" />
@@ -85,22 +85,22 @@
         android:fillColor="#2f2e41" />
     <path
         android:pathData="M50.177,606.27c22.438,13.5 31.08,40.314 31.08,40.314s-27.738,4.927 -50.177,-8.573S0,597.697 0,597.697 27.738,592.77 50.177,606.27Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M530.38,100.676a49.004,49.004 0,0 0,-8.07 -15.67,49.783 49.783,0 0,0 -4.17,-4.77A49.106,49.106 0,0 0,483.27 65.736L177.73,65.736A49.28,49.28 0,0 0,128.5 114.966L128.5,598.506A49.28,49.28 0,0 0,177.73 647.736L483.27,647.736A49.28,49.28 0,0 0,532.5 598.506L532.5,114.966A48.871,48.871 0,0 0,530.38 100.676ZM530.5,598.506A47.287,47.287 0,0 1,483.27 645.736L177.73,645.736A47.287,47.287 0,0 1,130.5 598.506L130.5,114.966A47.287,47.287 0,0 1,177.73 67.736L483.27,67.736a47.113,47.113 0,0 1,34.25 14.74q0.735,0.78 1.44,1.59A47.12,47.12 0,0 1,530.5 114.966Z"
         android:fillColor="#2f2e41" />
     <path
         android:pathData="M177.242,143.446c-0.055,-0.13 -0.124,-0.249 -0.185,-0.374a30.294,30.294 0,0 0,3.315 -14.268c0,-15.502 -9.687,-26.328 -23.557,-26.328s-23.557,10.827 -23.557,26.328 9.687,26.328 23.557,26.328a22.226,22.226 0,0 0,17.296 -7.723c4.441,7.186 13.026,8.134 13.422,8.174l0.468,-4.596C187.677,150.952 180.056,150.06 177.242,143.446ZM156.815,150.512c-11.151,0 -18.938,-8.927 -18.938,-21.709s7.787,-21.709 18.938,-21.709 18.938,8.927 18.938,21.709a26.092,26.092 0,0 1,-2.11 10.607c-6.894,-4.189 -19.721,-1.686 -21.46,-1.319l0.95,4.52c4.711,-0.986 14.084,-1.778 18.164,0.782A17.668,17.668 0,0 1,156.815 150.512Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M158.5,166.118a8.014,8.014 0,0 0,-11.333 11.333L158.5,188.785l11.333,-11.333A8.014,8.014 0,0 0,158.5 166.118Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M483.758,573.124c0.055,0.13 0.124,0.249 0.185,0.374a30.294,30.294 0,0 0,-3.315 14.268c0,15.502 9.687,26.328 23.557,26.328s23.557,-10.827 23.557,-26.328 -9.687,-26.328 -23.557,-26.328a22.226,22.226 0,0 0,-17.296 7.723c-4.441,-7.186 -13.026,-8.134 -13.422,-8.174L473,565.583C473.323,565.617 480.944,566.509 483.758,573.124ZM504.185,566.057c11.151,0 18.938,8.927 18.938,21.709s-7.787,21.709 -18.938,21.709 -18.938,-8.927 -18.938,-21.709a26.092,26.092 0,0 1,2.11 -10.607c6.894,4.189 19.721,1.686 21.46,1.319l-0.95,-4.52c-4.711,0.986 -14.084,1.778 -18.164,-0.782A17.668,17.668 0,0 1,504.185 566.057Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M502.5,550.451A8.014,8.014 0,0 0,513.833 539.118L502.5,527.785 491.167,539.118A8.014,8.014 0,0 0,502.5 550.451Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M355.146,340.447c-13.614,-23.004 -40.549,-24.076 -40.549,-24.076s-26.246,-3.356 -43.083,31.679c-15.693,32.655 -37.352,64.185 -3.487,71.829l6.117,-19.039 3.788,20.456a132.507,132.507 0,0 0,14.49 0.248c36.267,-1.171 70.805,0.343 69.693,-12.671C360.637,391.573 368.245,362.581 355.146,340.447Z"
         android:fillColor="#2f2e41" />
@@ -133,28 +133,28 @@
         android:fillColor="#2f2e41" />
     <path
         android:pathData="M345.231,402.805l-21.204,9.248l-4.976,0.492l-22.605,-4.914l0.997,20.115l22.1,-10.225l4.976,-0.492l23.676,5.696l-2.964,-19.92z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M387.74,574.785c0.22,0.66 0.41,1.33 0.58,2h7.42a18.536,18.536 0,0 0,1.66 -2ZM191.75,135.785v441h276.5v-441ZM466.25,574.785L193.75,574.785v-437h272.5ZM387.74,574.785c0.22,0.66 0.41,1.33 0.58,2h7.42a18.536,18.536 0,0 0,1.66 -2Z"
         android:fillColor="#2f2e41" />
     <path
         android:pathData="M282.601,328.718l0.171,-0.86c0.051,-0.255 4.945,-25.825 -7.665,-49.784l-0.912,-1.733 1.938,0.277c0.557,0.08 13.289,2.122 22.417,22.222 0.801,-3.063 1.608,-9.505 -0.897,-20.36l-0.356,-1.545 1.548,0.344c0.482,0.107 11.469,2.697 15.825,16.041l17.295,-14.634L331.965,302.458c4.651,-2.366 18.915,-8.731 27.986,-3.062l1.384,0.865 -1.399,0.84c-0.119,0.071 -11.262,6.831 -13.471,13.671 2.603,0.022 8.811,0.111 14.957,0.48 15.786,0.947 17.108,2.765 17.108,4.394v0.571l-0.491,0.29c-0.28,0.166 -27.999,16.69 -28.613,29.583l-0.063,1.327ZM345.193,316.766L344.013,316.766l0.194,-1.165c1.097,-6.584 9.717,-12.934 13.233,-15.277 -9.909,-4.377 -25.812,4.573 -25.979,4.668l-1.496,0.854L329.965,282.998l-16.367,13.849 -0.413,-1.514c-2.868,-10.515 -10.018,-14.371 -13.208,-15.6 3.292,15.761 -0.331,22.05 -0.492,22.319l-1.024,1.707 -0.758,-1.841c-6.614,-16.063 -15.735,-21.171 -19.779,-22.705 10.4,21.457 7.683,43.565 6.958,48.168l62.684,21.313c2.005,-12.365 23.558,-26.285 28.492,-29.325C373.012,317.75 358.309,316.766 345.193,316.766Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M269.171,266.613a3.587,3.587 0,1 1,3.587 3.587A3.591,3.591 0,0 1,269.171 266.613ZM271.171,266.613a1.587,1.587 0,1 0,1.587 -1.587A1.589,1.589 0,0 0,271.171 266.613Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M295.041,266.613a3.587,3.587 0,1 1,3.587 3.587A3.591,3.591 0,0 1,295.041 266.613ZM297.041,266.613a1.587,1.587 0,1 0,1.587 -1.587A1.589,1.589 0,0 0,297.041 266.613Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M332.552,273.081a3.587,3.587 0,1 1,3.587 3.587A3.591,3.591 0,0 1,332.552 273.081ZM334.552,273.081a1.587,1.587 0,1 0,1.587 -1.587A1.589,1.589 0,0 0,334.552 273.081Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M382.998,317.059a3.587,3.587 0,1 1,3.587 3.587A3.591,3.591 0,0 1,382.998 317.059ZM384.998,317.059a1.587,1.587 0,1 0,1.587 -1.587A1.589,1.589 0,0 0,384.998 317.059Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M364.889,295.07a3.587,3.587 0,1 1,3.587 3.587A3.591,3.591 0,0 1,364.889 295.07ZM366.889,295.07a1.587,1.587 0,1 0,1.587 -1.587A1.589,1.589 0,0 0,366.889 295.07Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M12,645.285h909v2h-909z"
         android:fillColor="#3f3d56" />
