--- a/app/src/main/res/drawable/ic_undraw_notes.xml
+++ b/app/src/main/res/drawable/ic_undraw_notes.xml
@@ -59,28 +59,28 @@
         android:fillColor="#cbcbcb" />
     <path
         android:pathData="M290.2,374.577h244.496v8.631h-244.496z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M290.2,397.017h244.496v8.631h-244.496z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M290.2,419.457h244.496v8.631h-244.496z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M275.36,379.218m-5.633,0a5.633,5.633 0,1 1,11.265 0a5.633,5.633 0,1 1,-11.265 0"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M538.637,295.915a10.067,10.067 0,0 1,3.922 -14.93l27.896,-87.347 19.428,10.092 -33.53,82.686a10.122,10.122 0,0 1,-17.717 9.499Z"
         android:fillColor="#9f616a" />
     <path
         android:pathData="M561.428,205.716a4.509,4.509 0,0 1,0.021 -3.759l9.555,-20.542a12.536,12.536 0,0 1,24.06 7.052l-3.194,22.504a4.514,4.514 0,0 1,-5.752 3.694l-21.859,-6.477A4.509,4.509 0,0 1,561.428 205.716Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M642.019,209.183l-1.558,21.818l-52.986,18.701l-0.779,-21.039l55.323,-19.48z"
         android:fillColor="#9f616a" />
     <path
         android:pathData="M574.229,177.236l17.142,-12.467 28.051,-7.792 23.376,4.675 3.896,36.622 -4.675,23.376 -60.778,14.026 -6.234,-10.909s-14.026,-14.026 -3.117,-29.61Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M567.995,145.237L567.995,124.774a32.644,32.644 0,1 1,65.287 0v20.463a4.39,4.39 0,0 1,-4.385 4.385L572.38,149.622A4.39,4.39 0,0 1,567.995 145.237Z"
         android:fillColor="#2f2e41" />
@@ -95,7 +95,7 @@
         android:fillColor="#9f616a" />
     <path
         android:pathData="M635.806,203.133a4.509,4.509 0,0 1,-2.479 -2.825L626.838,178.601a12.536,12.536 0,0 1,22.677 -10.696l12.549,18.951a4.514,4.514 0,0 1,-1.85 6.58L639.565,203.102A4.509,4.509 0,0 1,635.806 203.133Z"
-        android:fillColor="#ef7c8e" />
+        android:fillColor="@color/primaryColor" />
     <path
         android:pathData="M639.353,490.356l-13.508,-0.001l-6.426,-52.102l19.936,0.001l-0.002,52.102z"
         android:fillColor="#9f616a" />
