--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,11 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="blackTrans">#99000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primaryColor">#EF7C8E</color>
-    <color name="primaryDarkColor">#D8A7B1</color>
-    <color name="secondaryColor">#FAE8E0</color>
-    <color name="secondaryColorTrans">#99FAE8E0</color>
+    <color name="primaryColor">#F03A47</color>
+    <color name="primaryDarkColor">#0A0908</color>
+    <color name="secondaryColor">#FBFBFF</color>
+    <color name="secondaryColorTrans">#99FBFBFF</color>
     <color name="transparentColor">#00000000</color>
 </resources>
