--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -13,7 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="140dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/rec">
 
         <RelativeLayout
             android:layout_width="0dp"
